made all fonts 16px minimum and fixed clipping of delete

--- a/client/src/components/singleNote/markdown-styles.css
+++ b/client/src/components/singleNote/markdown-styles.css
@@ -52,7 +52,7 @@
   background-color: #ededed;
   margin: 10px auto 10px 1rem;
 	padding: 1rem;
-	font-size: .85rem;
+	font-size: 1rem;
 	color: #333;
   overflow-x: auto;
 	max-width: 40rem;
